--- a/style.css
+++ b/style.css
@@ -61,3 +61,10 @@ body{
     padding-top: 50px;
     padding-bottom: 50px;
 }
+
+.center{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+}
