--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@
     padding-top:0px;
     padding-bottom: 0px;
 }
+.navbar-collapse {
+    position: relative;
+    float: right !important;
+    margin-left: 60%;
+}
+
 
 a.navbar-brand{
     padding: 10px;
@@ -58,8 +64,15 @@ body{
 
 /* bootstrap container styling*/
 .container {
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding-top: 0%;
+    padding-bottom: 0%;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    background-color: white;
+}
+
+.outerbox { 
+    background-color: white;
 }
 
 .center{
